--- a/Application_Clean/Application_Clean.vcxproj
+++ b/Application_Clean/Application_Clean.vcxproj
@@ -149,6 +149,9 @@
     <ClCompile Include="src\FPSCamera.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\InputHandler.cpp" />
+    <ClCompile Include="src\Cube.cpp" />
+    <ClCompile Include="src\Lights\DirectionalLight.cpp" />
+    <ClCompile Include="src\Lights\Light.cpp" />
     <ClCompile Include="src\myScene.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\WindowManager.cpp" />
@@ -158,6 +161,9 @@
     <ClInclude Include="include\FPSCamera.h" />
     <ClInclude Include="include\GLFWinputCodes.h" />
     <ClInclude Include="include\InputHandler.h" />
+    <ClInclude Include="include\Cube.h" />
+    <ClInclude Include="include\Lights\DirectionalLight.h" />
+    <ClInclude Include="include\Lights\Light.h" />
     <ClInclude Include="include\myScene.h" />
     <ClInclude Include="include\Properties.h" />
     <ClInclude Include="include\Scene.h" />
