--- a/Application_Clean/Application_Clean.vcxproj
+++ b/Application_Clean/Application_Clean.vcxproj
@@ -150,9 +150,9 @@
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\InputHandler.cpp" />
     <ClCompile Include="src\Cube.cpp" />
-    <ClCompile Include="src\Lights\DirectionalLight.cpp" />
-    <ClCompile Include="src\Lights\Light.cpp" />
+    <ClCompile Include="src\DirectionalLight.cpp" />
     <ClCompile Include="src\myScene.cpp" />
+    <ClCompile Include="src\PointLight.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\WindowManager.cpp" />
   </ItemGroup>
@@ -162,9 +162,9 @@
     <ClInclude Include="include\GLFWinputCodes.h" />
     <ClInclude Include="include\InputHandler.h" />
     <ClInclude Include="include\Cube.h" />
-    <ClInclude Include="include\Lights\DirectionalLight.h" />
-    <ClInclude Include="include\Lights\Light.h" />
+    <ClInclude Include="include\DirectionalLight.h" />
     <ClInclude Include="include\myScene.h" />
+    <ClInclude Include="include\PointLight.h" />
     <ClInclude Include="include\Properties.h" />
     <ClInclude Include="include\Scene.h" />
     <ClInclude Include="include\Shader.h" />
