--- a/Application_Clean/Application_Clean.vcxproj
+++ b/Application_Clean/Application_Clean.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="src\Cube.cpp" />
     <ClCompile Include="src\DirectionalLight.cpp" />
     <ClCompile Include="src\myScene.cpp" />
+    <ClCompile Include="src\Plane.cpp" />
     <ClCompile Include="src\PointLight.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\WindowManager.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="include\Cube.h" />
     <ClInclude Include="include\DirectionalLight.h" />
     <ClInclude Include="include\myScene.h" />
+    <ClInclude Include="include\Plane.h" />
     <ClInclude Include="include\PointLight.h" />
     <ClInclude Include="include\Properties.h" />
     <ClInclude Include="include\Scene.h" />
